--- a/thesis.tex
+++ b/thesis.tex
@@ -65,66 +65,63 @@
 
 \mainmatter
 \chapter{Introduction}
-\textbf{PLAN:} Will be written later, about one page 
-In spoof trading, manipulator attempts to influence price of an asset through artificial trade orders which enables manipulator to gain profit.
+\textbf{PLAN:} Will be written later, about one to two page 
 
 \section{Thesis statement}
-\textbf{PLAN:} About 2-3 pages
-
 % intro: main objective
-The main objective of this thesis is to study phenomena of spoof trading in Northern European stock exchanges. This research attempts to explain market conditions in which manipulator is like to commence spoof trading and examine differences of the orders that are utilised in spoof trading compared to regular stock market trading. 
-
-% WRONG PLACE??
-%The research will utilise trading data to detect and identify spoof trading, and then use regular stock market behaviour as a benchmark to estimate how spoof trading differs.
-
-% existance -> examination
-At first it is necessary to confirm whether spoof trading occurs in Northern European stock exchanges, only then it is possible to further examine spoof trading. 
+The main objective of this thesis is to study spoof trading in Northern European stock exchanges. This research attempts to explain phenomena of spoof trading itself, market conditions in which manipulator is likely to commence spoof trading and examine differences of the orders that are utilised in spoof trading compared to regular stock market trading. 
 
 % limitation: confirmation of spoof trading could too challenging since traders' intent is hard to quantify
-In spoof trading trader intentionally submits deceptive trade order into exchange in order to provide false information about demand or supply of a security. The intention of an order is difficult to prove via data analytical means, since any kind of trade is permitted per se, even if the trade does not conform to common trading behaviour or is even harmful to the trader. FIX: As a result the assessment of order's genuineness through quantitative analysis is always at the mercy of an inspector.
+In spoof trading trader intentionally submits deceptive trade order into exchange in order to falsify true demand or supply of a security. The categorization of an order as genuine or artificial beyond no doubt via data analytical means is difficult, since in isolation any kind of trade is permitted, even if the trade does not conform to common trading behaviour or is even harmful to the trader. As a result the assessment of order's genuineness through quantitative analysis is always at the mercy of an inspector.
 
 % modification of plan: study of circumstances that would enable spoof trading
 For above reason, estimate about existence of spoof trading is at best vague and it is not possible with data analytical means to truly confirm spoof trading phenomena. Hence, it is necessary to study logical connections that are interconnected with spoof trading. In spoof trading the most defining aspect is the link between trade imbalance and price changes, as manipulator attempts to influence price of a security through deceptive orders.
 
 % research goal: do trade imbalances cause price shifts
-This thesis will explore whether trade imbalances do affect security prices, more precisely whether oversupply of an asset will decrease price of the asset and under-supply of an asset will increase price of the asset, as per law of supply and demand. Any such correlation reveals possibility for potential trade spoofing, even if the price fluctuations were not exploited. 
+This thesis will firstly explore how trade imbalances do affect security prices. More precisely whether increased demand of an asset will lead to rise in the price, and conversely increase in supply of an asset will cause price to decrease. This behaviour would be in accordance with the laws of supply and demand, but the difference is in the essence of buy-sell-imbalance of an asset. 
 
 % research goal: determine existence of spoof trading
-The next step is to attempt to determine whether spoof trading occurs in Northern European stock exchanges. 
+In spoof trading this imbalance is artificial and won't be corrected until cancellation of the spoof order, while in normal trading imbalances should fluctuate more smoothly. Then by studying the nature of these trade imbalances, it is potentially possible to determine whether spoof trading occurs in Northern European stock exchanges. 
 
 % research goal: explore market circumstances & study spoof orders
-In case spoof trading was detected, the last step is to study the market circumstances in which spoof trading is likely to occur and the spoof orders.
+In case spoof trading was detected, the last step is to study other characteristics of the spoof orders and the market circumstances in which spoof trading is likely to occur.
 
 % Conclusion: list of steps as in research plan
-This thesis pursues following research goals:
+In conclusion this thesis pursues following research goals:
 \begin{enumerate}
 	\item Study whether trade imbalances lead to price changes.
 	\item Attempt to identify spoof trading and confirm its' existence in Northern European stock market.
-	\item Describe the market situations in which spoof trading is likely to happen.
 	\item Study how spoof trading differs from regular trading.
+	\item Describe the market situations in which spoof trading is likely to happen.
 \end{enumerate}
 
 \section{Literature review}
-\textbf{PLAN:} At least add more details about the research, also needs new ending, about 3-4 pages
+\textbf{PLAN:} Needs new ending, and more as comments, around 3 pages
 
-Allen and Gale \parencite*{AllenGale1992} initially argued that under asymmetrical sale and purchase liquidity, buy and sale orders lead to different price responses, which can create opportunities for profitable price manipulation. They developed theoretical framework to prove that an uninformed trader is able profit by commencing in transaction-based stock price manipulation. Transaction-based stock manipulation means that manipulator is able to affect stock prices only through her orders. \autocite{AllenGale1992}
+Allen and Gale \parencite*{AllenGale1992} initially argued that under asymmetrical buy and sell liquidity of a stock, buy and sale orders lead to different price responses, which can create opportunities for profitable price manipulation. They developed theoretical framework to prove that an uninformed trader is able profit by commencing in transaction-based stock price manipulation. Uninformed trader does not possess any insider information about the asset. Transaction-based stock manipulation is based on influencing stock prices only through orders without doing any external actions such as misinforming other traders.
 
-Jarrow \parencite*{Jarrow1992} studied market manipulation strategies by large traders, showing large traders, even if they do not possess insider information, have enough market power to be able to manipulate market prices through their sheer size of orders. 
+Jarrow \parencite*{Jarrow1992} studied potential market manipulation strategies by large traders, showing large traders, even if they do not possess insider information, have enough market power to be able to manipulate market prices through their sheer size of orders. Allen and Gale in addition to Jarrow's research proved theoretical existence of spoof trading, enabling researchers to study the phenomena in real market.
 
-Numerous empirical research has shown market manipulation is worldwide phenomena: Aggarwal and Wu \parencite*{AggarwalWu2006}, Aktaş and Doğanay (2006, see \cite{OgutDoganayAktas2009}), Lee at al. \parencite*{LeeEomPark2009}, and Kong and Wang \parencite*{KongWang2014} showed evidence of spoof order manipulation in US, Turkey, Korea, and China respectively.
+Numerous empirical studies have shown market manipulation is worldwide phenomena: Aggarwal and Wu \parencite*{AggarwalWu2006}, Aktaş and Doğanay (2006, see \cite{OgutDoganayAktas2009}), Lee at al. \parencite*{LeeEomPark2009}, and Kong and Wang \parencite*{KongWang2014} showed evidence of spoof order manipulation in US, Turkey, Korea, and China respectively.
 
 Aggarwal and Wu \parencite*{AggarwalWu2006} extended framework developed by Allen and Gale and studied how information seekers affect trading. They found that informed parties, corporate insiders, brokers, underwriters, large shareholders and market makers, may worse market efficiency and are more likely to be manipulators. When studying U.S equity market, they found that manipulating mostly happens in small, illiquid and inefficient markets.
 
-Lee at al \parencite*{LeeEomPark2009} studied buy-orders in KRX Korea Exchange. They found the susceptible stocks to spoofing behaviour tend to have higher return volatility, lower market capitalization, lower price levels and lower managerial transparency. Also when exchange stopped disclosing the total quantity of buy and sell sides, so that spoofing orders could no longer be used to mislead investors, spoofing dramatically declined. In general spoofing orders were much bigger than typical orders and usually at least 10 ticks away from the current price, thus executability of the orders were extremely low, consequently presenting the intent of manipulators was real. \autocite{LeeEomPark2009}
+Lee at al \parencite*{LeeEomPark2009} studied buy-orders in KRX Korea Exchange. They found the susceptible stocks to spoofing behaviour tend to have higher return volatility, lower market capitalization, lower price levels and lower managerial transparency. Also when exchange stopped disclosing the total quantity of buy and sell sides, so that spoofing orders could no longer be used to mislead investors, spoofing dramatically declined. In general spoofing orders were much bigger than typical orders and usually at least 10 ticks away from the current price, thus executability of spoofing orders were extremely low, consequently confirming the intent of manipulation. \autocite{LeeEomPark2009}
 
-However in the study of Lee et al. spoofing order was defined as "\textit{a bid/ask with a size at least twice the previous day’s average order size and with an order price at least 6 ticks away from the market price, followed by an order on the opposite side of the market, and subsequently followed by the withdrawal of the first order}" \autocite[p. 11]{LeeEomPark2009}. This kind of precise definition of spoofing order surely affects the results they will gather from their analysis.
+However in the study of Lee et al. spoofing order was defined as "\textit{a bid/ask with a size at least twice the previous day’s average order size and with an order price at least 6 ticks away from the market price, followed by an order on the opposite side of the market, and subsequently followed by the withdrawal of the first order}" \autocite[p. 11]{LeeEomPark2009}. This kind of precise definition of spoofing order surely affects the results they will gather from their analysis. % FIX
 
-Kong and Wang \parencite*{KongWang2014} found that market statistics of manipulation cases, like price, volume, turnover ratio volatility and liquidity, were in accordance with previous studies. Also market manipulators tend to target specific time periods of greater information asymmetry, then manipulators are able to present themselves as informed traders and affect behaviour of other investors in the short-term, in the long-term the effects of manipulation disappear. \autocite{KongWang2014}
+Kong and Wang \parencite*{KongWang2014} found that market statistics of manipulation cases, like price, volume, turnover ratio volatility and liquidity, were in accordance with previous studies. Also market manipulators tend to target specific time periods of greater information asymmetry, then manipulators are able to present themselves as informed traders and affect behaviour of other investors in the short-term, while in the long-term the effects of manipulation disappear. \autocite{KongWang2014}
+
+% Is it a spoof?: is_it_a_spoof.pdf
 
 In the previously mentioned studies data was labelled in advance or labelled using fixed rules as manipulative or non-manipulative. Lee et al. used rule-based approach, other studies used court rulings to define manipulative trades. The subjects of studies were only "bad" manipulators who were caught or classified using arbitrary manual rules. None of the studies adopted pure data analytical viewpoint of detecting spoofing behaviour in stock-wide context, which I will study in my thesis.
 
 % limitation in current research, need to merge with previous paragraph
 To date most of the spoofing behaviour research only concerns study of spoofing orders. The orders are deterministically identified either as normal stock market behaviour or spoofing behaviour, then spoofing orders' characteristics and impact is further studied. Mostly used identification methods are technical rule-based methods or based on court rulings orders are identified as illegal spoofing behaviour. This however limits the study of  
+
+% Technical papers
+% Detecting Price Manipulation in the Financial Market by Yi Cao: detecting_price_manipulation.pdf
+% A Comparative Evaluation of Unsupervised Anomaly Detection Algorithms for Multivariate Data: goldstein_uchida_2016.PDF
 
 \section{Data}
 \textbf{PLAN:} Almost ready, about 3 pages
