Planning of literature review

--- a/thesis.tex
+++ b/thesis.tex
@@ -96,25 +96,31 @@ In conclusion this thesis pursues following research goals:
 \end{enumerate}
 
 \section{Literature review}
-\textbf{PLAN:} Needs new ending, and more as comments, around 3 pages
+\textbf{PLAN:} Needs new ending, and more (technical) sources in comments
 
+% Allen and Gale's research
 Allen and Gale \parencite*{AllenGale1992} initially argued that under asymmetrical buy and sell liquidity of a stock, buy and sale orders lead to different price responses, which can create opportunities for profitable price manipulation. They developed theoretical framework to prove that an uninformed trader is able profit by commencing in transaction-based stock price manipulation. Uninformed trader does not possess any insider information about the asset. Transaction-based stock manipulation is based on influencing stock prices only through orders without doing any external actions such as misinforming other traders.
 
+% Jarrow's research and theoretical foundation
 Jarrow \parencite*{Jarrow1992} studied potential market manipulation strategies by large traders, showing large traders, even if they do not possess insider information, have enough market power to be able to manipulate market prices through their sheer size of orders. Allen and Gale in addition to Jarrow's research proved theoretical existence of spoof trading, enabling researchers to study the phenomena in real market.
 
+% Empirical intro
 Numerous empirical studies have shown market manipulation is worldwide phenomena: Aggarwal and Wu \parencite*{AggarwalWu2006}, Aktaş and Doğanay (2006, see \cite{OgutDoganayAktas2009}), Lee at al. \parencite*{LeeEomPark2009}, and Kong and Wang \parencite*{KongWang2014} showed evidence of spoof order manipulation in US, Turkey, Korea, and China respectively.
 
+% Aggarwal and Wu in US
 Aggarwal and Wu \parencite*{AggarwalWu2006} extended framework developed by Allen and Gale and studied how information seekers affect trading. They found that informed parties, corporate insiders, brokers, underwriters, large shareholders and market makers, may worse market efficiency and are more likely to be manipulators. When studying U.S equity market, they found that manipulating mostly happens in small, illiquid and inefficient markets.
 
+% Lee et al in Korea
 Lee at al \parencite*{LeeEomPark2009} studied buy-orders in KRX Korea Exchange. They found the susceptible stocks to spoofing behaviour tend to have higher return volatility, lower market capitalization, lower price levels and lower managerial transparency. Also when exchange stopped disclosing the total quantity of buy and sell sides, so that spoofing orders could no longer be used to mislead investors, spoofing dramatically declined. In general spoofing orders were much bigger than typical orders and usually at least 10 ticks away from the current price, thus executability of spoofing orders were extremely low, consequently confirming the intent of manipulation. \autocite{LeeEomPark2009}
 
+% Critisism of Lee at al research
 However in the study of Lee et al. spoofing order was defined as "\textit{a bid/ask with a size at least twice the previous day’s average order size and with an order price at least 6 ticks away from the market price, followed by an order on the opposite side of the market, and subsequently followed by the withdrawal of the first order}" \autocite[p. 11]{LeeEomPark2009}. This kind of precise definition of spoofing order surely affects the results they will gather from their analysis. % FIX
 
+% Kong and Wang in China
 Kong and Wang \parencite*{KongWang2014} found that market statistics of manipulation cases, like price, volume, turnover ratio volatility and liquidity, were in accordance with previous studies. Also market manipulators tend to target specific time periods of greater information asymmetry, then manipulators are able to present themselves as informed traders and affect behaviour of other investors in the short-term, while in the long-term the effects of manipulation disappear. \autocite{KongWang2014}
 
-% Is it a spoof?: is_it_a_spoof.pdf
-
-In the previously mentioned studies data was labelled in advance or labelled using fixed rules as manipulative or non-manipulative. Lee et al. used rule-based approach, other studies used court rulings to define manipulative trades. The subjects of studies were only "bad" manipulators who were caught or classified using arbitrary manual rules. None of the studies adopted pure data analytical viewpoint of detecting spoofing behaviour in stock-wide context, which I will study in my thesis.
+% What is different in my research
+In the previously mentioned studies data was labelled in advance or labelled using fixed rules as manipulative or non-manipulative. Lee et al. used rule-based approach, other studies used court rulings to define manipulative trades. This inherently causes the subjects of studies were only incompetent manipulators who were caught or classified using arbitrary manual rules. None of the studies adopted pure data analytical viewpoint of detecting spoofing behaviour in stock-wide context, which I will study in my thesis.
 
 % limitation in current research, need to merge with previous paragraph
 To date most of the spoofing behaviour research only concerns study of spoofing orders. The orders are deterministically identified either as normal stock market behaviour or spoofing behaviour, then spoofing orders' characteristics and impact is further studied. Mostly used identification methods are technical rule-based methods or based on court rulings orders are identified as illegal spoofing behaviour. This however limits the study of  
