Add intro to financial markets

--- a/thesis.tex
+++ b/thesis.tex
@@ -159,7 +159,7 @@ For each stock data consists of daily message book and order book. Message books
 \footnotetext{At the time of data gathering ISIN was SE0000101032, but due to stock split Atlas Copco A was assigned new ISIN \autocite{GlobeNewswire2018a}}.
 
 % introduce table
-Table \ref{table:companies} introduces detailed information of the companies researched in this thesis. Two of the companies are listed in OMX Nordic Helsinki, two in OMX Nordic Stockholm and one is listed in OMX Nordic Copenhagen exchanges, hence all the biggest northern European stock exchanges are 
+Table \ref{table:companies} introduces stock market information about companies researched in this thesis. Two of the companies are listed in OMX Nordic Helsinki, two in OMX Nordic Stockholm and one is listed in OMX Nordic Copenhagen exchanges, hence all the biggest northern European stock exchanges are 
 covered.
 
 % Problem: small sample size
@@ -203,40 +203,33 @@ In conclusion because of these limitations it is very unlikely to find spoofing 
 
 \chapter{Financial markets}
 \textbf{PLAN:} Overall introduction to financial markets, introduction of order types and other essential financial terms
-\textbf{QUESTION:} Is this information too basic to be included? Should I just assume reader knows this kind of information or just add necessary financial terms into glossary and write shorter introductory?
 
 % introduction
+Financial market is a market in which its' participants buy and sell financial assets. The mission of a financial market is to bring together buyers and the sellers in the market. The trades in financial markets are bilateral, two sides of an trade are connected through the market but the underlying asset and payment are exchanged only between the trading sides, markets do not engage in the trades.
 
 % categorization of financial markets
-Financial markets are divided into exchange-traded markets and over-the-counter (OTC) markets. In exchange markets market participants trade exchange standardized contracts while in OTC markets two parties define contracts by themselves. \autocite{Hull2017} Exchange markets are mainly divided by their geographical location, but also further categorized by the instruments they trade. Most common types of exchange markets include stock markets, bond markets, and various derivatives markets such as futures markets and options markets.
+Financial markets are divided into exchange-traded markets and over-the-counter (OTC) markets. In exchange markets market participants trade exchange standardized contracts while in OTC markets two parties are free to define contracts by themselves. Exchange markets are mainly divided by their geographical location, but also further categorized by the instruments they trade. Most common types of exchange markets include stock markets, bond markets, and various derivatives markets such as futures markets and options markets. \autocite{Hull2017}
 
-% this study is about stock markets
+% limit and market orders
+In exchange-traded markets traders mainly submit limit orders or market orders to buy and sell financial assets. In limit orders trader makes a bid to buy or sell a decided amount of financial instruments at a maximum purchase price or minimum selling price. Market order buys a financial instrument at lowest selling prices or sells one at the highest buying prices, all until whole volume of the market order is consumed. 
 
-% type of orders in equity markets
-In exchange-traded markets market participants submit limit orders or market orders to the exchange. In limit orders trader decides 
-
-\begin{itemize}
-	\item \textit{Stock} that trader wants to trade.
-	\item \textit{Order type} 
-	\item \textit{Amount} of the stock that trader wants to trade.
-	\item \textit{Price} of the stock trader is willing to trade at.
-\end{itemize}
-
-Other order types are also available in OMX Markets but everything stems from these two kinds of orders.
-
-Trading periods: Pre-open session, crossing, continuous trading, pre-close, post-trading, after-market
+% Trading periods: Pre-open session, crossing, continuous trading, pre-close, post-trading, after-market
+% Market maker
 
 \section{Market micro-structure}
 \textbf{PLAN:} Explain how trading works, how the price of an asset is formed
 % intro
 
-- four? pictures of stock trading: vanha tilanne, uusi limit order, uusi market order, uusi tilanne 
-- price forming process
+% Order book
 
-% Market functions: liquidity and esp. Price discovery 
-% FIX: SOURCE 
+% Trading
+- four? pictures of stock trading: vanha tilanne, uusi limit order, uusi market order, uusi tilanne 
+
+% Market function: price discovery 
 % 1) http://www.nasdaq.com/investing/glossary/p/price-discovery-process
 % 2) http://www.bfjlaward.com/pdf/25919/124-132_Alan_JPM_1021w.pdf
+
+One of the most important functions of market exchange is price discovery process. Nasdaq glossary \autocite*{} defines price discovery process as a process that produces the prices of assets in the marketplace through buyers' and sellers' interactions.
 
 % GOOD REFERENCE:
 % https://www.google.com.tw/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwj19sTHxb3YAhVFJJQKHeY5AucQFgglMAA&url=http%3A%2F%2Fwww.springer.com%2Fcda%2Fcontent%2Fdocument%2Fcda_downloaddocument%2F9783540888017-c1.pdf%3FSGWID%3D0-0-45-690899-p173864254&usg=AOvVaw2XFH8kToKPU-xiEfgJLpye
